[fix/taxonomy] fix default taxonomy align

--- a/src/editor/blocks/taxonomy-list/styles/style.scss
+++ b/src/editor/blocks/taxonomy-list/styles/style.scss
@@ -17,4 +17,5 @@
 .taxonomy-list-wrapper{
     display: flex;
     flex-direction: column;
+    align-items: start;
 }
